Adds Botanic Garden with split columns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
+
   <body>
+    <h1>Denver Botanic Gardens</h1>
+
+    <div class="row">
+      <div class="column">
+        <img src="images/GrandeSteffani_BotanicGarden_SteffaniGrande-7401.jpg alt="Denver Botanic Gardens">
+      </div>
+      <div class ="column">
+        
+      </div>
+    </div>
+
+
 
   </body>
 </html>
