Adds html doctype

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -15,7 +16,7 @@
         <img src="images/GrandeSteffani_BotanicGarden_SteffaniGrande-7401.jpg alt="Denver Botanic Gardens">
       </div>
       <div class ="column">
-        
+
       </div>
     </div>
 
